# filestructor

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTING_RU.md  README.md  README_RU.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  release.yml  tests.yml
api/: index.html
app/: __init__.py  app.py  builder.py  components.py  config_loader.py  console.py  file_utils.py  visitors.py
cli/: index.html
config/: exclude_config.yaml
contributing/: index.html
de/: index.html
de/api/: index.html
de/cli/: index.html
de/contributing/: index.html
de/installation/: index.html
de/usage/: index.html
docs/: contributing.md  index.md  installation.md
docs/de/: api.md  cli.md  contributing.md  index.md  installation.md  usage.md
docs/de/coverage/: index.html
docs/en/: api.md  contributing.md  index.md  usage.md
docs/en/coverage/: index.html
docs/ru/: api.md  cli.md  contributing.md  index.md  installation.md  usage.md
installation/: index.html
ru/: index.html
ru/api/: index.html
ru/cli/: index.html
ru/contributing/: index.html
ru/installation/: index.html
ru/usage/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_app.py  test_builder.py  test_components.py  test_console.py  test_file_utils.py  test_visitors.py
usage/: index.html
